@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.girbola</groupId>
 	<artifactId>mdir_fx_2021</artifactId>
@@ -35,9 +33,10 @@
 	</developers>
 	<properties>
 
+		<javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>16</maven.compiler.release>
-		<javafx.version>17.0.1</javafx.version>
+		<maven.compiler.release>19</maven.compiler.release>
+		<javafx.version>19.0.2</javafx.version>
 		<metadata-extractor.version>2.18.0</metadata-extractor.version>
 		<vlcj.version>4.8.2</vlcj.version>
 		<jcodec.version>0.2.5</jcodec.version>
@@ -45,8 +44,8 @@
 		<imageio-tiff.version>3.8.3</imageio-tiff.version>
 		<sqlite-jdbc.version>3.28.0</sqlite-jdbc.version>
 		<slf4j.version>2.0.3</slf4j.version>
-		<maven.compiler.source>16</maven.compiler.source>
-		<maven.compiler.target>16</maven.compiler.target>
+		<maven.compiler.source>19</maven.compiler.source>
+		<maven.compiler.target>19</maven.compiler.target>
 
 	</properties>
 	<dependencies>
@@ -65,6 +64,12 @@
 
 		<dependency>
 			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-media</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-swing</artifactId>
 			<version>${javafx.version}</version>
 		</dependency>
@@ -73,16 +78,28 @@
 			<artifactId>metadata-extractor</artifactId>
 			<version>${metadata-extractor.version}</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>uk.co.caprica</groupId>-->
+<!--			<artifactId>vlcj</artifactId>-->
+<!--			<version>${vlcj.version}</version>-->
+<!--		</dependency>-->
+
 		<dependency>
 			<groupId>uk.co.caprica</groupId>
-			<artifactId>vlcj</artifactId>
-			<version>${vlcj.version}</version>
+			<artifactId>vlcj-javafx</artifactId>
+			<version>1.2.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jcodec</groupId>
 			<artifactId>jcodec</artifactId>
 			<version>${jcodec.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.bytedeco</groupId>
+			<artifactId>javacv-platform</artifactId>
+			<version>1.5.8</version>
 		</dependency>
 
 		<!-- Twelvemonkeys -->
@@ -145,6 +162,12 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 
@@ -153,55 +176,28 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.10.1</version>
 				<configuration>
-					<debug>true</debug>
-					<release>${maven.compiler.release}</release>
-					<compilerArgs>
-						<arg>-Xlint:deprecation</arg>
-					</compilerArgs>
+					<source>19</source>
+					<target>19</target>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.8</version>
-				<configuration>
-					<!-- <arg>javafx.graphics/com.sun.glass.ui=org.openjfx.Main</arg> -->
-					<mainClass>com.girbola.Main</mainClass>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>3.0.0-M5</version>
-				<configuration>
-					<argLine>--illegal-access=permit</argLine>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.2.2</version>
 				<executions>
 					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
+						<!-- Default configuration for running with: mvn clean javafx:run -->
+						<id>default-cli</id>
 						<configuration>
-							<shadedArtifactAttached>true</shadedArtifactAttached>
-							<shadedClassifierName>project-classifier</shadedClassifierName>
-							<outputFile>shade\${project.artifactId}.jar</outputFile>
-							<transformers>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.girbola.Launcher</mainClass>
-								</transformer>
-							</transformers>
+							<mainClass>com.girbola/com.girbola.Main</mainClass>
+							<launcher>app</launcher>
+							<jlinkZipName>app</jlinkZipName>
+							<jlinkImageName>app</jlinkImageName>
+							<noManPages>true</noManPages>
+							<stripDebug>true</stripDebug>
+							<noHeaderFiles>true</noHeaderFiles>
 						</configuration>
 					</execution>
 				</executions>
